# TRexRewrite

./: Cargo.toml  README.md  rustfmt.toml
bench/: Cargo.toml
src/: lib.rs
src/tesla/: expressions.rs  mod.rs  predicates.rs
src/trex/: aggregators.rs  caches.rs  expressions.rs  listeners.rs  mod.rs  operations.rs  providers.rs  rule_checks.rs  rule_processor.rs  sqldriver.rs  stack.rs  stacks.rs  typeinference.rs
src/trex/cache/: gdfs_cache.rs  mod.rs  ownable.rs
src/trex/expressions/: evaluation.rs  inference.rs  mod.rs  operations.rs
src/trex/sqlite/: mod.rs  query_builder.rs
src/trex/stack/: aggregators.rs  mod.rs
src/trex/types/: inference.rs  mod.rs
tesla/src/: expressions.rs  lib.rs  predicates.rs
tests/: bench.rs  equivalent.rs  extended.rs  sqlite.rs
trex/src/: lib.rs
trex/src/cache/: mod.rs
trex/src/sqlite/: mod.rs
