[package]
name = "trex"
version = "0.1.0"

[dependencies]
chrono = "^0.2"
rusqlite = "^0.7"
r2d2 = "^0.7"
r2d2_sqlite = "^0.1"
threadpool = "^1"
linear-map = "^1"
fnv = "^1"
lru-cache = "0.0.7"
ordered-float = "^0.2"
owning_ref = { git = "https://github.com/dippi/owning-ref-rs.git", rev = "refmut" }


[dev-dependencies]
rand = "^0.3"
